# bllvm-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: .trigger  ci.yml  release.yml  security.yml
coverage/: cobertura.xml
docs/: api-reference.md  governance-crypto-library.md
examples/: governance_signing.rs  governance_verification.rs  multisig_workflow.rs
src/: lib.rs
src/cli/: input.rs  mod.rs  output.rs
src/composition/: composer.rs  config.rs  conversion.rs  lifecycle.rs  mod.rs  registry.rs  schema.rs  types.rs  validation.rs
src/governance/: bip32.rs  bip39.rs  bip44.rs  error.rs  keys.rs  messages.rs  mod.rs  multisig.rs  nested_multisig.rs  psbt.rs  signatures.rs  verification.rs
src/module/: manifest.rs  traits.rs
src/module/ipc/: client.rs  protocol.rs
src/module/security/: permissions.rs
tests/: bip32_bip39_bip44_tests.rs  cli_output_coverage_tests.rs  cli_utilities_tests.rs  composition_tests.rs  coverage_tests.rs  governance_crypto_tests.rs  governance_keys_coverage_tests.rs  key_generation_tests.rs  message_format_tests.rs  multisig_coverage_tests.rs  multisig_tests.rs  psbt_tests.rs  signature_tests.rs
